Fix spacing of equation, add frac environment for k.

--- a/problem.tex
+++ b/problem.tex
@@ -55,7 +55,7 @@ Substituting this into \eqref{eqn:wave}, we obtain the Helmholtz equation
 \end{equation}
 where the wavenumber $k$ is defined as
 \begin{align}
-	k=\omega/c.
+	k = \frac{\Omega}{c}.
 \end{align}
 
 The mapping between Cartesian coordinates $(x,y,z)$ and cylindrical polar coordinates $(r,\varphi,z)$ is given by
@@ -225,9 +225,9 @@ To obtain the full domain from this, a rotation of $2\pi$ radians about the $z$-
 To complete the problem formulation, boundary conditions must also be specified for the PDE.
 The boundaries we need to specify on are the inner regions of the cylindrical walls.
 This translates to the four boundaries in the reduced equation.
-The Dirichlet boundary conditions are then
+The Dirichlet boundary conditions on the entire boundary are then
 \begin{align}
-	u_N(r,z) = u_0, \qquad \mathrm{on} \partial \Omega,
+	u_N(r,z) = u_0 \quad \mathrm{on} \quad \partial \Omega,
 \end{align}
 for some given value of $u_0$.
 
